# Cinnamon

./: .gitignore  .gitmodules  Makefile.am  configure.ac  meson.build
data/: Makefile.am  cinnamon.desktop.in.in  org.cinnamon.gschema.xml  org.cinnamon.gschema.xml.in
data/theme/: cinnamon.css
debian/: cinnamon-common.install  control  rules
docs/reference/: meson.build
docs/reference/cinnamon/: cinnamon-docs.sgml  meson.build
files/usr/lib/cinnamon-settings/: cinnamon-settings.py
files/usr/lib/cinnamon-settings/modules/: cs_backgrounds.py  cs_keyboard.py  cs_menu.py  cs_mouse.py  cs_panel.py  cs_themes.py  cs_windows.py
files/usr/share/applications/: cinnamon2d.desktop
files/usr/share/cinnamon/applets/brightness@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/grouped-window-list@cinnamon.org/: appGroup.js  appList.js  applet.js  menus.js
files/usr/share/cinnamon/applets/ime@cinnamon.org/: applet.js  metadata.json
files/usr/share/cinnamon/applets/keyboard@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/menu@cinnamon.org/: applet.js  settings-schema.json
files/usr/share/cinnamon/applets/network@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/panel-launchers@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/power@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/settings@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/sound@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/spacer@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/systray@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/window-list@cinnamon.org/: applet.js
files/usr/share/cinnamon/applets/xapp-status@cinnamon.org/: applet.js
files/usr/share/cinnamon/cinnamon-screensaver/: authenticator.py  cinnamon-screensaver-main.py  clock.py  fader.py  lock.py  manager.py  overlay.py  timers.py  trackers.py  utils.py  window.py
files/usr/share/cinnamon/cinnamon-settings/: cinnamon-settings.py
files/usr/share/cinnamon/cinnamon-settings/modules/: cs_accessibility.py  cs_applets.py  cs_calendar.py  cs_screensaver.py  cs_themes.py
files/usr/share/gnome-session/sessions/: cinnamon.session  cinnamon2d.session
js/: Makefile.am
js/misc/: docInfo.js  housekeeping.js
js/ui/: applet.js  appletManager.js  cinnamonDBus.js  desklet.js  deskletManager.js  expoThumbnail.js  extension.js  extensionSystem.js  grabHelper.js  ibusCandidatePopup.js  keybindings.js  keyboard.js  layout.js  magnifier.js  magnifierDBus.js  main.js  messageTray.js  modalDialog.js  panel.js  placesManager.js  popupMenu.js  runDialog.js  screenShield.js  settings.js  spinner.js  switcherPopup.js  themeManager.js  windowManager.js
libcvc/: Makefile.am
src/: Makefile-st.am  Makefile.am  cinnamon-app-private.h  cinnamon-app-system.c  cinnamon-app.c  cinnamon-embedded-window.c  cinnamon-embedded-window.h  cinnamon-global.c  cinnamon-global.h  cinnamon-gtk-embed.c  cinnamon-gtk-embed.h  cinnamon-theme-manager.c  cinnamon-theme-manager.h  cinnamon-tray-icon.c  cinnamon-tray-manager.c  cinnamon-tray-manager.h  cinnamon-window-tracker.c  main.c  meson.build
src/st/: meson.build  st-cogl-wrapper.c  st-private.c  st-sass-context.c  st-sass-context.h  st-texture-cache.c  st-texture-cache.h  st-theme-context.c  st-theme-node-drawing.c  st-theme-node.c  st-theme.c  st-theme.h  st-widget.c  test-theme.c
src/tray/: na-tray-child.c  na-tray-child.h  na-tray-manager.c  na-tray-manager.h
